# src/docs/swagger.json
@@ -6,6 +6,11 @@
     "paths": {
         "/v1/shorten": {
             "post": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Create shortn url",
                 "consumes": [
                     "application/json"
@@ -52,6 +57,11 @@
         },
         "/v1/shorten/{id}": {
             "put": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Update shortn url",
                 "consumes": [
                     "application/json"
@@ -109,6 +119,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Delete shortn url",
                 "consumes": [
                     "application/json"
@@ -153,6 +168,11 @@
         },
         "/v1/shorten/{short_code}": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Redirect to original URL using short code",
                 "consumes": [
                     "application/json"
@@ -197,6 +217,11 @@
         },
         "/v1/shorten/{short_code}/stats": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Get shortn url by short code",
                 "consumes": [
                     "application/json"
